// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BakeryTerms Snapshot Tests should match snapshot for bakery variant 1`] = `
<div
  class="relative"
>
  <div
    class="relative"
  >
    <img
      alt="Food dishes"
      class="h-[800px] w-full object-cover"
      data-priority="true"
      height="800"
      src="/images/food/food-dishes"
      width="1200"
    />
    <div
      class="absolute inset-0 flex flex-col items-center justify-center px-4 pb-8 pt-16 md:py-8"
    >
      <div
        class="mb-3 w-full max-w-4xl rounded-2xl bg-gray-900 p-4 text-center md:mb-6 md:p-10"
      >
        <h2
          class="mb-3 text-xl font-bold text-white md:mb-6 md:text-5xl"
        >
          Package Delivery Terms 
          <br />
           & Pricing Chart
        </h2>
        <div
          class="flex flex-row items-center justify-center gap-3 md:gap-6"
        >
          <button
            class="rounded-lg bg-yellow-500 px-4 py-2 text-sm font-bold text-gray-900 shadow-lg transition-all duration-200 hover:bg-yellow-400 focus:outline-none focus:ring-2 focus:ring-yellow-300 focus:ring-offset-2 md:px-6 md:py-3 md:text-lg"
          >
            Get a Quote
          </button>
          <button
            class="rounded-lg bg-yellow-500 px-4 py-2 text-sm font-bold text-gray-900 shadow-lg transition-all duration-200 hover:bg-yellow-400 focus:outline-none focus:ring-2 focus:ring-yellow-300 focus:ring-offset-2 md:px-6 md:py-3 md:text-lg"
            data-calendar-url="https://calendar.google.com/calendar/appointments/schedules/AcZssZ0J6woLwahSRd6c1KrJ_X1cOl99VPr6x-Rp240gi87kaD28RsU1rOuiLVyLQKleUqoVJQqDEPVu?gv=true"
            data-testid="schedule-dialog-button"
          >
            Book a Call
          </button>
        </div>
      </div>
      <div
        class="w-full max-w-4xl rounded-xl bg-white p-4 text-left shadow-lg md:p-8"
      >
        <ul
          class="list-disc space-y-4 pl-5"
        >
          <li
            class="text-sm leading-snug md:text-base md:leading-normal"
          >
            Pricing is based on a Maximum order of 10 packages per route.
          </li>
          <li
            class="text-sm leading-snug md:text-base md:leading-normal"
          >
            Fees are based on the delivery zone; packages may have multiple zones in a route.
          </li>
          <li
            class="text-sm leading-snug md:text-base md:leading-normal"
          >
            Toll will be charged regardless of the direction of the bridges crossed. Only 1 toll charged per route.
          </li>
          <li
            class="text-sm leading-snug md:text-base md:leading-normal"
          >
            The default terms are to be paid on a net 7; this may vary based on volume and mutual agreement.
          </li>
          <li
            class="text-sm leading-snug md:text-base md:leading-normal"
          >
            Late payments are the greater of 3.5% of the invoice or $25 per month after 30 days.
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    data-testid="mock-dialog-form"
  >
    Dialog Form
  </div>
</div>
`;

exports[`BakeryTerms Snapshot Tests should match snapshot for vendor variant 1`] = `
<div
  class="relative"
>
  <div
    class="relative"
  >
    <img
      alt="Food dishes"
      class="h-[800px] w-full object-cover"
      data-priority="true"
      height="800"
      src="/images/food/food-dishes"
      width="1200"
    />
    <div
      class="absolute inset-0 flex items-center justify-center px-3 pb-24 pt-16 sm:px-4 sm:pb-32 sm:pt-24 md:pb-40 md:pt-32"
    >
      <div
        class="relative z-10 mx-auto flex w-full max-w-5xl flex-col items-center gap-6 sm:gap-8"
      >
        <div
          class="w-full rounded-2xl border-[6px] border-gray-300 bg-[#f3f3f3] p-3 shadow-2xl sm:border-[10px] sm:p-6 lg:p-8"
        >
          <div
            class="rounded-xl bg-white px-4 py-5 shadow-md sm:px-10 sm:py-8 lg:px-14"
          >
            <div
              class="flex flex-col items-center text-center"
            >
              <h2
                class="text-2xl font-extrabold leading-tight text-gray-900 sm:text-3xl md:text-4xl"
              >
                Package Delivery Terms
                <br />
                & Pricing Chart
              </h2>
              <div
                class="mt-5 flex flex-wrap items-center justify-center gap-4 sm:gap-6 md:mt-6 md:gap-8"
              >
                <button
                  class="rounded-lg bg-yellow-400 px-5 py-2.5 text-sm font-extrabold text-gray-900 shadow-md transition hover:bg-yellow-300 focus:outline-none focus:ring-2 focus:ring-yellow-300 focus:ring-offset-2 sm:px-6 sm:py-3 sm:text-base"
                >
                  Get a Quote
                </button>
                <button
                  class="rounded-lg bg-yellow-400 px-5 py-2.5 text-sm font-extrabold text-gray-900 shadow-md transition hover:bg-yellow-300 focus:outline-none focus:ring-2 focus:ring-yellow-300 focus:ring-offset-2 sm:px-6 sm:py-3 sm:text-base"
                  data-calendar-url="https://calendar.google.com/calendar/appointments/schedules/AcZssZ0J6woLwahSRd6c1KrJ_X1cOl99VPr6x-Rp240gi87kaD28RsU1rOuiLVyLQKleUqoVJQqDEPVu?gv=true"
                  data-testid="schedule-dialog-button"
                >
                  Book a Call
                </button>
              </div>
            </div>
            <div
              class="mt-6 grid gap-6 text-gray-900 sm:mt-8 md:mt-10 md:grid-cols-2 md:gap-10"
            >
              <div
                class="space-y-5 md:space-y-6"
              >
                <div>
                  <h3
                    class="text-sm font-extrabold sm:text-base md:text-lg"
                  >
                    Headcount vs Food Cost
                  </h3>
                  <ul
                    class="mt-2 list-disc space-y-1.5 pl-5 text-xs leading-relaxed sm:text-sm md:mt-3 md:space-y-2 md:text-base"
                  >
                    <li>
                      Delivery cost is based on the lesser, please make sure to update your order sheet weekly by end of day Friday.
                    </li>
                  </ul>
                </div>
                <div>
                  <h3
                    class="text-sm font-extrabold sm:text-base md:text-lg"
                  >
                    Mileage Rate
                  </h3>
                  <ul
                    class="mt-2 list-disc space-y-1.5 pl-5 text-xs leading-relaxed sm:text-sm md:mt-3 md:space-y-2 md:text-base"
                  >
                    <li>
                      $3.00 per mile after 10 miles
                    </li>
                  </ul>
                </div>
                <div>
                  <h3
                    class="text-sm font-extrabold sm:text-base md:text-lg"
                  >
                    Daily Drive Discount
                  </h3>
                  <ul
                    class="mt-2 list-disc space-y-1.5 pl-5 text-xs leading-relaxed sm:text-sm md:mt-3 md:space-y-2 md:text-base"
                  >
                    <li>
                      2 Drives/Day-$5/drive
                    </li>
                    <li>
                      3 Drives/Day-$10/drive
                    </li>
                    <li>
                      4 Drives/Day-$15/drive
                    </li>
                  </ul>
                </div>
              </div>
              <div>
                <ol
                  class="list-decimal space-y-3 pl-5 text-xs leading-relaxed sm:text-sm md:space-y-4 md:text-base"
                >
                  <li>
                    If the drive is batched together with the same driver, we only charge tolls/mileage once for the total trip.
                  </li>
                  <li>
                    Hosting events requires advanced notice and is based on availability.
                  </li>
                  <li>
                    Default terms are to be paid on a NET 7; this can vary based on volume.
                  </li>
                  <li>
                    Late payments are the greater amount to an interest rate of 2.5% of the invoice or $25 per month after 30 days.
                  </li>
                </ol>
              </div>
            </div>
          </div>
        </div>
        <div
          class="w-full max-w-2xl"
        >
          <button
            class="block w-full rounded-lg bg-yellow-400 px-5 py-2.5 text-center text-sm font-bold text-gray-900 shadow-md transition hover:bg-yellow-300 focus:outline-none focus:ring-2 focus:ring-yellow-300 focus:ring-offset-2 sm:px-6 sm:text-base md:text-lg"
            data-calendar-url="https://calendar.google.com/calendar/appointments/schedules/AcZssZ0J6woLwahSRd6c1KrJ_X1cOl99VPr6x-Rp240gi87kaD28RsU1rOuiLVyLQKleUqoVJQqDEPVu?gv=true"
            data-testid="schedule-dialog-button"
          >
            Hosting Services? Let's Talk
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="mock-dialog-form"
  >
    Dialog Form
  </div>
</div>
`;

exports[`BakeryTerms Snapshot Tests should match snapshot with all props 1`] = `
<div
  class="relative"
>
  <div
    class="relative"
  >
    <img
      alt="Food dishes"
      class="h-[800px] w-full object-cover"
      data-priority="true"
      height="800"
      src="/images/food/food-dishes"
      width="1200"
    />
    <div
      class="absolute inset-0 flex items-center justify-center px-3 pb-24 pt-16 sm:px-4 sm:pb-32 sm:pt-24 md:pb-40 md:pt-32"
    >
      <div
        class="relative z-10 mx-auto flex w-full max-w-5xl flex-col items-center gap-6 sm:gap-8"
      >
        <div
          class="w-full rounded-2xl border-[6px] border-gray-300 bg-[#f3f3f3] p-3 shadow-2xl sm:border-[10px] sm:p-6 lg:p-8"
        >
          <div
            class="rounded-xl bg-white px-4 py-5 shadow-md sm:px-10 sm:py-8 lg:px-14"
          >
            <div
              class="flex flex-col items-center text-center"
            >
              <h2
                class="text-2xl font-extrabold leading-tight text-gray-900 sm:text-3xl md:text-4xl"
              >
                Package Delivery Terms
                <br />
                & Pricing Chart
              </h2>
              <div
                class="mt-5 flex flex-wrap items-center justify-center gap-4 sm:gap-6 md:mt-6 md:gap-8"
              >
                <button
                  class="rounded-lg bg-yellow-400 px-5 py-2.5 text-sm font-extrabold text-gray-900 shadow-md transition hover:bg-yellow-300 focus:outline-none focus:ring-2 focus:ring-yellow-300 focus:ring-offset-2 sm:px-6 sm:py-3 sm:text-base"
                >
                  Get a Quote
                </button>
                <button
                  class="rounded-lg bg-yellow-400 px-5 py-2.5 text-sm font-extrabold text-gray-900 shadow-md transition hover:bg-yellow-300 focus:outline-none focus:ring-2 focus:ring-yellow-300 focus:ring-offset-2 sm:px-6 sm:py-3 sm:text-base"
                  data-calendar-url="https://calendar.google.com/calendar/appointments/schedules/AcZssZ0J6woLwahSRd6c1KrJ_X1cOl99VPr6x-Rp240gi87kaD28RsU1rOuiLVyLQKleUqoVJQqDEPVu?gv=true"
                  data-testid="schedule-dialog-button"
                >
                  Book a Call
                </button>
              </div>
            </div>
            <div
              class="mt-6 grid gap-6 text-gray-900 sm:mt-8 md:mt-10 md:grid-cols-2 md:gap-10"
            >
              <div
                class="space-y-5 md:space-y-6"
              >
                <div>
                  <h3
                    class="text-sm font-extrabold sm:text-base md:text-lg"
                  >
                    Headcount vs Food Cost
                  </h3>
                  <ul
                    class="mt-2 list-disc space-y-1.5 pl-5 text-xs leading-relaxed sm:text-sm md:mt-3 md:space-y-2 md:text-base"
                  >
                    <li>
                      Delivery cost is based on the lesser, please make sure to update your order sheet weekly by end of day Friday.
                    </li>
                  </ul>
                </div>
                <div>
                  <h3
                    class="text-sm font-extrabold sm:text-base md:text-lg"
                  >
                    Mileage Rate
                  </h3>
                  <ul
                    class="mt-2 list-disc space-y-1.5 pl-5 text-xs leading-relaxed sm:text-sm md:mt-3 md:space-y-2 md:text-base"
                  >
                    <li>
                      $3.00 per mile after 10 miles
                    </li>
                  </ul>
                </div>
                <div>
                  <h3
                    class="text-sm font-extrabold sm:text-base md:text-lg"
                  >
                    Daily Drive Discount
                  </h3>
                  <ul
                    class="mt-2 list-disc space-y-1.5 pl-5 text-xs leading-relaxed sm:text-sm md:mt-3 md:space-y-2 md:text-base"
                  >
                    <li>
                      2 Drives/Day-$5/drive
                    </li>
                    <li>
                      3 Drives/Day-$10/drive
                    </li>
                    <li>
                      4 Drives/Day-$15/drive
                    </li>
                  </ul>
                </div>
              </div>
              <div>
                <ol
                  class="list-decimal space-y-3 pl-5 text-xs leading-relaxed sm:text-sm md:space-y-4 md:text-base"
                >
                  <li>
                    If the drive is batched together with the same driver, we only charge tolls/mileage once for the total trip.
                  </li>
                  <li>
                    Hosting events requires advanced notice and is based on availability.
                  </li>
                  <li>
                    Default terms are to be paid on a NET 7; this can vary based on volume.
                  </li>
                  <li>
                    Late payments are the greater amount to an interest rate of 2.5% of the invoice or $25 per month after 30 days.
                  </li>
                </ol>
              </div>
            </div>
          </div>
        </div>
        <div
          class="w-full max-w-2xl"
        >
          <button
            class="block w-full rounded-lg bg-yellow-400 px-5 py-2.5 text-center text-sm font-bold text-gray-900 shadow-md transition hover:bg-yellow-300 focus:outline-none focus:ring-2 focus:ring-yellow-300 focus:ring-offset-2 sm:px-6 sm:text-base md:text-lg"
            data-calendar-url="https://calendar.google.com/calendar/appointments/schedules/AcZssZ0J6woLwahSRd6c1KrJ_X1cOl99VPr6x-Rp240gi87kaD28RsU1rOuiLVyLQKleUqoVJQqDEPVu?gv=true"
            data-testid="schedule-dialog-button"
          >
            Hosting Services? Let's Talk
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="mock-dialog-form"
  >
    Dialog Form
  </div>
</div>
`;
